--- a/index.html
+++ b/index.html
@@ -200,9 +200,7 @@
           >https://github.com/cabanier/cityslingvr</a
         >
       </p>
-
-      <p style="color: white;">Click the VR button on the bottom right to start! Browser with WebXR support required.</p>
-      <p style="font-size: 12px;">Updated by  - <a href="https://github.com/cabanier" style="font-size: 12px; color: black;">Rik Cabanier</a></p>
+      <p style="font-size: 12px;">Originally created by - <a href="https://github.com/talkol" style="font-size: 12px; color: black;">Tal Kol</a>. Updated by - <a href="https://github.com/cabanier" style="font-size: 12px; color: black;">Rik Cabanier</a></p>
     </div>
   </body>
 </html>
