--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8" />
     <meta name="keywords" content="WebXR, VR, City Sling VR" />
     <title>City Sling VR Experience</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-NG82SD287B"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
