put smaller sound file in

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
         ></audio>
         <audio
           id="sound-crystal"
-          src="assets/crystal.mp3"
+          src="assets/crystal.webm"
         ></audio>
         <a-plane id="groundPlane" width="160" height="160" color="red" instanced-mesh="capacity:1000;positioning: world;"></a-plane>
       </a-assets>
