convert to webp

--- a/index.html
+++ b/index.html
@@ -111,61 +111,61 @@
       <a-assets>
         <img
           id="style1-building1-texture"
-          src="assets/s1b1.jpg"
+          src="assets/s1b1.webp"
           preload="auto"
         />
         <img
           id="style1-building2-texture"
-          src="assets/s1b2.jpg"
+          src="assets/s1b2.webp"
           preload="auto"
         />
         <img
           id="style1-building3-texture"
-          src="assets/s1b3.jpg"
+          src="assets/s1b3.webp"
           preload="auto"
         />
         <img
           id="style1-building4-texture"
-          src="assets/s1b4.jpg"
+          src="assets/s1b4.webp"
           preload="auto"
         />
         <img
           id="style1-building5-texture"
-          src="assets/s1b5.jpg"
+          src="assets/s1b5.webp"
           preload="auto"
         />
         <img
           id="style1-building6-texture"
-          src="assets/s1b6.jpg"
+          src="assets/s1b6.webp"
           preload="auto"
         />
         <img
           id="style1-building7-texture"
-          src="assets/s1b7.jpg"
+          src="assets/s1b7.webp"
           preload="auto"
         />
         <img
           id="style1-building8-texture"
-          src="assets/s1b8.jpg"
+          src="assets/s1b8.webp"
           preload="auto"
         />
         <img
           id="style1-building9-texture"
-          src="assets/s1b9.jpg"
+          src="assets/s1b9.webp"
           preload="auto"
         />
         <img
           id="style1-building10-texture"
-          src="assets/s1b10.jpg"
+          src="assets/s1b10.webp"
           preload="auto"
         />
         <img
           id="style1-building11-texture"
-          src="assets/s1b11.jpg"
+          src="assets/s1b11.webp"
           preload="auto"
         />
-        <img id="style1-ground1-texture" src="assets/s1g1.jpg" preload="auto" />
-        <img id="style1-road1-texture" src="assets/s1r1.jpg" preload="auto" />
+        <img id="style1-ground1-texture" src="assets/s1g1.webp" preload="auto" />
+        <img id="style1-road1-texture" src="assets/s1r1.webp" preload="auto" />
         <a-mixin
           id="tile"
           tile="
