more janky multiplayer

--- a/index.html
+++ b/index.html
@@ -337,12 +337,12 @@
         Click the VR button to start! Browser with WebXR
         support required.
       </p>
-<!--
+
       <section class="slider-checkbox">
         <input type="checkbox" id="multiplayer" aria-label="multi player"/>
-        <label class="label" style="color: white">Multiplayer mode. Beta</label>
+        <label class="label" style="color: white">Multiplayer mode. Beta and janky. Track others by following the green spheres.</label>
       </section>
--->
+
       <section class="slider-checkbox">
         <input type="checkbox" id="advanced" aria-label="Advanced setting"/>
         <label class="label" style="color: white">Advanced mode. Reset score if you hit the ground or a building</label>
